Use Files.readString()
Rather than relying on default charset and going through bytes
ourselves, use the Java 11+ method for that.

Change-Id: Ibea40f0d28a6627237ee21c4257356f21237f0f0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>